--- a/style.css
+++ b/style.css
@@ -55,11 +55,11 @@ span {
    padding-bottom: 40px;
    
 }
-/* video {
+video {
 
    display: flex;
    justify-content: right;
-} */
+}
 body {
     background: #f7f7f7;
 }
