--- a/style.css
+++ b/style.css
@@ -55,11 +55,11 @@ span {
    padding-bottom: 40px;
    
 }
-video {
+/* video {
 
    display: flex;
    justify-content: right;
-}
+} */
 body {
     background: #f7f7f7;
 }
@@ -79,10 +79,10 @@ body {
     
    
 }
-/* .main_video {
+.main_video {
     display: flex; 
     justify-content: center;
-} */
+}
 .text_bar_main {
     text-align: center;
     font-size: 2.4rem;
