--- a/style.css
+++ b/style.css
@@ -154,6 +154,8 @@ justify-content: center;
 }
 
 .promo_text {
+    padding-bottom: 20px;
+    text-align: center;
     padding-top: 100px;
     
     font-size: 1.4rem; 
