--- a/style.css
+++ b/style.css
@@ -79,10 +79,9 @@ body {
     
    
 }
-/* .main_video {
-    display: flex; 
-    justify-content: center;
-} */
+.main_video {
+   text-align: center;
+}
 .text_bar_main {
     text-align: center;
     font-size: 2.4rem;
